Fixed slight memory leak Added right click menu to hub jumps Implemented ship names for the hover over systems

--- a/public/css/siggy.compiled.css
+++ b/public/css/siggy.compiled.css
@@ -675,6 +675,13 @@ select:focus
 	margin-right:4px;
 }
 
+
+.hub-jump
+{
+	cursor:pointer;
+	border-bottom: 1px dashed #999;
+}
+
 /*****
 whpopup tabs
 *******/
